# python-docs-samples

./: .coveragerc  .deepsorce.toml  .gitignore  .project  .python-version  .repo-metadata.json  .test_config.py  .trampolinerc  .trampolinerc_tmpl  .travis.yml  AUTHORING_GUIDE.md  Authoring.md  CODEOWNERS  CONTRIB.md  CONTRIBUTING.md  DO_NOT_MERGE_THIS_BRANCH  Google Cloud Documentation.yml  ISSUE_TEMPLATE.md  LICENSE  MAC_SETUP.md  Makefile  Política,yml  README.md  README.rst.in  SECURITY.md  STYLE.html  TESTING.md  Untitled.ipynb  app.yaml  batch_parse_form_v1beta2_test.py  batch_parse_table_v1beta2.py  batch_parse_table_v1beta2_test.py  batch_process_documents_processor_version_sample.py  batch_process_documents_processor_version_sample_test.py  batch_process_documents_sample.py  batch_process_documents_sample_bad_input_test.py  batch_process_documents_sample_test.py  batch_process_documents_sample_v1beta3.py  batch_process_documents_sample_v1beta3_test.py  conftest.py  (+56 more)
.cloud-build/: CheckPythonVersion.py  execute_changed_notebooks_cli.py  execute_changed_notebooks_helper.py  execute_notebook_cli.py  execute_notebook_helper.py  execute_notebook_remote.py  notebook-execution-test-cloudbuild-single.yaml  notebook-execution-test-cloudbuild.yaml  requirements.txt  test_folders.txt
.devcontainer/: devcontainer.json
.github/: .OwlBot.lock.yaml  .OwlBot.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto-approve.yml  auto-label.yaml  blunderbuss.yml  (+5 more)
dataflow/flex-templates/pipeline_with_dependencies/: .gitignore  Dockerfile  Dockerfile.flex_template  README.md  e2e_test.py  flex_template_cloudbuild.yaml  main.py  metadata.json  noxfile_config.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
dataflow/flex-templates/pipeline_with_dependencies/my_package/: launcher.py  my_pipeline.py  my_transforms.py
dataflow/flex-templates/pipeline_with_dependencies/my_package/utils/: figlet.py
dataflow/flex-templates/pipeline_with_dependencies/src/my_package/: __init__.py  launcher.py  my_pipeline.py  my_transforms.py
dataflow/flex-templates/pipeline_with_dependencies/src/my_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dataflow/flex-templates/pipeline_with_dependencies/src/my_package/utils/: __init__.py
people-and-planet-ai/weather-forecasting/serving/weather-model/: pyproject.toml
people-and-planet-ai/weather-forecasting/serving/weather-model/weather/: __init__.py  model.py  trainer.py
run/mcp-server/: .dockerignore  Dockerfile  Dockerfile.otel  README.md  otel_setup.py  pyproject.toml  server.py  server_otel.py  test_server.py  test_server_otel.py
(+12406 files in other folders)
